--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,353 @@ dist/
 .env.production.local
 .env.local
 google-cloud-key.json
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# Emma
+coverage/
+.emma/
+
+# Executable
+*.jar
+*.war
+*.ear
+
+# Various IDEs
+.idea/
+*.iws
+*.iml
+*.ipr
+*.sw?
+*.swo
+*~
+.project
+.classpath
+.settings/
+.loadpath
+.tm_properties
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# Eclipse
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# VS Code
+.vscode/
+
+# Spring Boot
+*.log
+logs/
+*.pid
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# .NET
+## Core
+bin/
+obj/
+out/
+.vs/
+.vscode/
+*.user
+*.userosscache
+*.sln.docstates
+*.userprefs
+
+## Package manager
+packages/
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+## Test results, logs, etc.
+testresults/
+*.testlog
+*.trx
+**/Backup/
+*.Cache
+ClientBin/
+[Ss]tyle[Cc]op.*
+**/RegExTesting.*
+TestResults/
+_UpgradeReport_Files/
+UpgradeLog*.XML
+UpgradeLog*.htm
+Config/
+Packages/
+[._]*.user
+[._]*.userprefs
+*.VC.db
+*.VC.VC.opendb
+**/[Bb]in/[Dd]ebug/**
+**/[Bb]in/[Rr]elease/**
+**/[Oo]bj/[Dd]ebug/**
+**/[Oo]bj/[Rr]elease/**
+**/[Bb]uild/[Ll]og/**
+**/[Bb]uild/[Tt]emp/**
+**/[Bb]lazor/[Bb]in/**
+**/[Bb]lazor/[Oo]bj/**
+**/[Ii]ntermediate/**
+**/[Bb]ackup*/
+**/[Dd]ebug/
+**/[Rr]elease/
+**/[Oo]ut/
+**/[Bb]uild/
+**/Debug/
+**/Release/
+**/Out/
+**/Build/
+**/bin/
+**/obj/
+**/logs/
+**/temp/
+**/[Tt]emp/
+**/[Tt]emporary[Tt]est[Tt]races/
+**/[Ii]ntelli[Tt]Sense/
+**/ServiceHub/
+**/ReSharper/
+**/[Rr]e[Ss]harper/
+**/[Rr]e[Ss]harper[Ee]lement/
+**/[Rr]e[Ss]harper[Aa]lt/
+**/[Rr]e[Ss]harper[Cc]ache/
+**/[Rr]e[Ss]harper[Tt]emp/
+**/[Rr]e[Ss]harper[Oo]ut/
+**/[Rr]e[Ss]harper[Oo]bj/
+**/[Tt]eams[Ff]oundation/
+**/[Tt]FS/
+**/[Tt]eam[Cc]ity/
+**/[Bb]uild/[Ll]og/
+**/[Bb]uild/[Tt]emp/
+**/[Bb]uild/[Oo]bj/
+**/[Oo]bj/[Dd]ebug/
+**/[Oo]bj/[Rr]elease/
+**/[Oo]ut/[Dd]ebug/
+**/[Oo]ut/[Rr]elease/
+**/[Dd]ebug/
+**/[Rr]elease/
+**/[Oo]utput/
+**/[Oo]utputs/
+**/[Ll]og/
+**/[Ll]ogs/
+**/[Tt]emp/
+**/[Tt]emporary/
+**/[Bb]ackup/
+**/[Bb]ackups/
+**/[Tt]est[Rr]esults/
+**/[Tt]est[Rr]esult/
+**/[Tt]est[Rr]esults/
+**/[Tt]est[Rr]esult/
+**/[Dd]eploy/
+**/[Dd]eployments/
+**/[Dd]eployed/
+**/[Pp]ackages/
+**/[Pp]ackage/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/
+**/[Ll]ibrary/[Oo]bj/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/
+**/[Ll]ibrary/[Bb]in/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[Bb]uild/[Oo]bj/
+**/[Ll]ibrary/[Oo]bj/[Dd]ebug/
+**/[Ll]ibrary/[Oo]bj/[Rr]elease/
+**/[Ll]ibrary/[Oo]ut/[Dd]ebug/
+**/[Ll]ibrary/[Oo]ut/[Rr]elease/
+**/[Ll]ibrary/[Dd]ebug/
+**/[Ll]ibrary/[Rr]elease/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Ll]og/
+**/[Ll]ibrary/[Ll]ogs/
+**/[Ll]ibrary/[Tt]emp/
+**/[Ll]ibrary/[Tt]emporary/
+**/[Ll]ibrary/[Bb]ackup/
+**/[Ll]ibrary/[Tt]est[Rr]esult/
+**/[Ll]ibrary/[Tt]est[Rr]esults/
+**/[Ll]ibrary/[Dd]eploy/
+**/[Ll]ibrary/[Pp]ackages/
+**/[Ll]ibrary/[Pp]ackage/
+**/[Ll]ibrary/[Oo]utput/
+**/[Ll]ibrary/[Oo]utputs/
+**/[Ll]ibrary/[Bb]uild/[Ll]og/
+**/[Ll]ibrary/[Bb]uild/[Tt]emp/
+**/[Ll]ibrary/[B......
